--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@
   --primary-color: #2f5496;
   --secondary-color: #6c757d;
   --accent-color: #007bff;
-  --success-color: #28a745;
+  --success-color: #8f9bed;
   --warning-color: #ffc107;
   --danger-color: #dc3545;
   --light-color: #f8f9fa;
